--- a/web/package.json
+++ b/web/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vben-admin",
-  "version": "2.8.0",
+  "name": "acmer-manage-system",
+  "version": "0.0.1",
   "author": {
-    "name": "vben",
-    "email": "anncwb@126.com",
-    "url": "https://github.com/anncwb"
+    "name": "zilanlann",
+    "email": "666zilan666@gmail.com",
+    "url": "https://github.com/zilanlann"
   },
   "scripts": {
     "commit": "czg",
