--- a/server/conf/config.toml
+++ b/server/conf/config.toml
@@ -1,21 +1,3 @@
-# jwt configuration
-# [jwt]
-# signing-key = "zilanlann"
-# expires-time = "7d"
-# buffer-time = "1d"
-# issuer = "zilanlann"
-
-# # zap logger configuration
-# [zap]
-# level = "info"
-# format = "console"
-# prefix = "[github.com/zilanlann/acmer-manage-system/server]"
-# director = "log"
-# show-line = true
-# encode-level = "LowercaseColorLevelEncoder"
-# stacktrace-key = "stacktrace"
-# log-in-console = true
-
 # server configuration
 [Server]
 RunMode = "debug"
@@ -33,3 +15,21 @@ Name = "acmer"
 TablePrefix = "acmer_"
 MaxIdleConns = 10
 MaxOpenConns = 100
+
+# jwt configuration
+[Jwt]
+Secret = "f^kAr7nF9VpaqM"
+LongExpiresTime = 168          # hours
+ShortExpiresTime = 3           # hours
+Issuer = "acmer-manage-system"
+
+# # zap logger configuration
+# [zap]
+# level = "info"
+# format = "console"
+# prefix = "[github.com/zilanlann/acmer-manage-system/server]"
+# director = "log"
+# show-line = true
+# encode-level = "LowercaseColorLevelEncoder"
+# stacktrace-key = "stacktrace"
+# log-in-console = true
