--- a/web/package.json
+++ b/web/package.json
@@ -33,19 +33,19 @@
     "vite",
     "esm"
   ],
-  "homepage": "https://github.com/pure-admin/pure-admin-thin",
+  "homepage": "https://github.com/zilanlann/acmer-manage-system",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pure-admin/pure-admin-thin.git"
+    "url": "git+https://github.com/zilanlann/acmer-manage-system.git"
   },
   "bugs": {
-    "url": "https://github.com/pure-admin/pure-admin-thin/issues"
+    "url": "https://github.com/zilanlann/acmer-manage-system/issues"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "author": {
-    "name": "xiaoxian521",
-    "email": "pureadmin@163.com",
-    "url": "https://github.com/xiaoxian521"
+    "name": "zilanlann",
+    "email": "666zilan666@gmail.com",
+    "url": "https://github.com/zilanlann"
   },
   "dependencies": {
     "@pureadmin/descriptions": "^1.2.1",
@@ -68,7 +68,9 @@
     "qs": "^6.12.0",
     "responsive-storage": "^2.2.0",
     "sortablejs": "^1.15.2",
+    "tippy.js": "^6.3.7",
     "vue": "^3.4.21",
+    "vue-demi": "^0.14.7",
     "vue-echarts": "^6.6.9",
     "vue-router": "^4.3.0",
     "vue-tippy": "^6.4.1",
@@ -133,7 +135,7 @@
     "vue-tsc": "^1.8.27"
   },
   "engines": {
-    "node": "^18.18.0 || ^20.9.0 || >=21.1.0",
+    "node": "^20.11.1 || >=21.1.0",
     "pnpm": ">=8.6.10"
   },
   "packageManager": "pnpm@8.6.10",
