--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./server
           platforms: linux/amd64,linux/arm64,linux/amd64/v2,linux/amd64/v3,linux/arm/v7
           push: true
           tags: zilanlann/ams-server:latest
