--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./server
-          platforms: linux/amd64,linux/arm64,linux/amd64/v2,linux/amd64/v3,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: zilanlann/ams-server:latest
