ci(config): :ferris_wheel: change default database name to ams

--- a/server/conf/config.toml
+++ b/server/conf/config.toml
@@ -10,8 +10,8 @@ user = "root"
 password = "X*TnVEzbKMwHLJ3"
 host = "mysql"
 port = "3306"
-name = "acmer"
-table_prefix = "acmer_"
+name = "ams"
+table_prefix = "ams_"
 max_idle_conns = 10
 max_open_conns = 100
 
